<resources>
    <string name="app_name">Garnish</string>
    <string name="splash_image">Splash Image</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="total_servings">Total Servings</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="check_internet_connection">Please check your internet connection.</string>
    <string name="nutella_pie_desc">Try Nutella Pie, the ambrosial combination of hazelnuts and chocolate, which will make you fall into an incoherent puddle of babbling ecstacy.</string>
    <string name="view_recipe">View Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="show_recipe">Show Recipe</string>
    <string name="show_steps">Show Steps</string>
    <string name="BUNDLE_KEY">RECIPEINFO</string>
    <string name="INGREDIENTS_KEY">INGREDIENTSINFO</string>
    <string name="STEPS_KEY">STEPSINFO</string>
    <string name="add_to_widget">Add to Widget</string>
</resources>
