<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/recipe_image"
        android:scaleType="center" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:textColor="@color/chocolateBrown"
            android:textSize="32sp"
            tools:text="Nutella Pie" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:contentDescription="@string/cooking_time"
                android:src="@drawable/cooking_time" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:contentDescription="@string/ingredients"
                android:src="@drawable/ingredients" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:contentDescription="@string/total_servings"
                android:src="@drawable/servings" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recipe_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/black"
                tools:text="10 minutes" />

            <TextView
                android:id="@+id/recipe_ingredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/black"
                tools:text="8 ingredients" />

            <TextView
                android:id="@+id/recipe_servings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/black"
                tools:text="8 servings" />

        </LinearLayout>

        <Button
            android:id="@+id/show_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_border_empty"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:paddingEnd="48dp"
            android:paddingStart="48dp"
            android:text="@string/show_recipe"
            android:textColor="@color/chocolateBrown"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>