<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="12dp"
    app:cardElevation="12dp"
    app:cardMaxElevation="12dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="match_parent"
            android:layout_height="312dp"
            android:contentDescription="@string/recipe_image"
            android:scaleType="centerCrop"
            tools:src="@drawable/nutella_pie" />

        <TextView
            android:id="@+id/recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:text="Nutella Pie" />

        <TextView
            android:id="@+id/recipe_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:textSize="16sp"
            tools:text="Try Nutella Pie, the ambrosial combination of hazelnuts and chocolate, which will make you fall into an incoherent puddle of babbling ecstacy." />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/cooking_time"
                android:src="@drawable/cooking_time" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/total_servings"
                android:src="@drawable/servings" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recipe_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@android:color/black"
                tools:text="10 minutes" />

            <TextView
                android:id="@+id/recipe_servings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@android:color/black"
                tools:text="8 servings" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>